--- a/UnpluggingSocialMedias.Core/UnpluggingSocialMedias.Core.csproj
+++ b/UnpluggingSocialMedias.Core/UnpluggingSocialMedias.Core.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="InstagramApiSharp" Version="1.7.2" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
 		<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
 	</ItemGroup>
