--- a/UnpluggingSocialMedias.Core/UnpluggingSocialMedias.Core.csproj
+++ b/UnpluggingSocialMedias.Core/UnpluggingSocialMedias.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,6 +11,12 @@
 		<PackageReference Include="InstagramApiSharp" Version="1.7.2" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.2.0" />
 		<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="102.0.5005.6102" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Services\Facebook\" />
+	  <Folder Include="Services\Interfaces\" />
+	  <Folder Include="Services\Telegram\" />
 	</ItemGroup>
 
 </Project>
