--- a/UnpluggingSocialMedias/Properties/launchSettings.json
+++ b/UnpluggingSocialMedias/Properties/launchSettings.json
@@ -1,35 +1,14 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:49927",
-      "sslPort": 44311
-    }
-  },
+{
   "profiles": {
     "AllMessagesToEmail": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "applicationUrl": "https://localhost:7226",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:7226;http://localhost:5226",
-      "dotnetRunMessages": true
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true,
-      "useSSL": true
     }
   }
 }
